--- a/altimeter WatchKit App/Base.lproj/Interface.storyboard
+++ b/altimeter WatchKit App/Base.lproj/Interface.storyboard
@@ -1,16 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14256" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14460.31" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch40" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14243"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14219"/>
+        <deployment identifier="watchOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14460.16"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="altimeter_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <group width="1" height="55" alignment="left" id="MCL-O3-dRY">
+                            <items>
+                                <label width="35" height="32" alignment="left" verticalAlignment="bottom" text="QNH" id="ceg-Yx-5If"/>
+                                <label width="93" height="48" alignment="left" verticalAlignment="bottom" text="29.92" textAlignment="right" id="oI2-zN-oSF">
+                                    <fontDescription key="font" style="UICTFontTextStyleTitle2"/>
+                                </label>
+                            </items>
+                        </group>
+                        <group width="1" alignment="left" id="Otd-bi-sDI">
+                            <items>
+                                <label alignment="left" verticalAlignment="bottom" text="Alt" id="je6-32-SpG"/>
+                                <label width="108" alignment="left" verticalAlignment="bottom" text="99999" textAlignment="right" id="Cn1-qS-3Uj">
+                                    <fontDescription key="font" style="UICTFontTextStyleTitle2"/>
+                                </label>
+                                <label width="23" alignment="left" verticalAlignment="bottom" text="ft" textAlignment="right" numberOfLines="2" id="wMH-M5-4Xh"/>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="altitudeDisplay" destination="Cn1-qS-3Uj" id="pmR-PG-TWJ"/>
+                        <outlet property="qnhDisplay" destination="oI2-zN-oSF" id="27w-Bc-eXh"/>
+                    </connections>
+                </controller>
             </objects>
-            <point key="canvasLocation" x="220" y="345"/>
+            <point key="canvasLocation" x="219.95061728395061" y="344.74619289340097"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -32,14 +60,14 @@
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="4sK-HA-Art" customClass="NotificationController" customModule="altimeter_WatchKit_App" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
         <!--Notification Controller-->
         <scene sceneID="Niz-AI-uX2">
             <objects>
-                <controller id="eXb-UN-Cd0" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="eXb-UN-Cd0" customClass="NotificationController" customModule="altimeter_WatchKit_App" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="345"/>
         </scene>
